--- a/multisla/src/main/resources/templates/detail/modeldetail.html
+++ b/multisla/src/main/resources/templates/detail/modeldetail.html
@@ -24,6 +24,9 @@
 	.modelsexteriorc{
 		background: url(assets/images/model/Model-S-Exterior-Grid-C-Desktop-Global.jpg) no-repeat top center;
 	}
+	.modelsautopilot{
+		background: url(assets/images/model/Autopilot-Hero-Vision-Desktop.jpg) no-repeat top center;
+	}
 </style>
  
 <!--Home Sections-->
@@ -48,7 +51,7 @@
 			        </div>
 			    </div>
 			    <div class="col-md-2">
-			        <div class="counter_item sm-m-top-40">
+			        <div class="counter_item">
 			            <h2 class="statistic-counter" style="color: white;"><em>2.1</em></h2>
 			            <h2 style="color: white;">sec</h2>
 			            <div class="separator_small"></div>
@@ -56,7 +59,7 @@
 			        </div>
 			    </div>
 			    <div class="col-md-2">
-			        <div class="counter_item sm-m-top-40">
+			        <div class="counter_item">
 			            <h2 class="statistic-counter" style="color: white;"><em>322</em></h2>
 			            <h2 style="color: white;">km/h</h2>
 			            <div class="separator_small"></div>
@@ -64,15 +67,15 @@
 			        </div>
 			    </div>
 			    <div class="col-md-2">
-			        <div class="counter_item sm-m-top-40">
+			        <div class="counter_item">
 			            <h2 class="statistic-counter" style="color: white;"><em>1,020</em></h2>
 			            <h2 style="color: white;">hp</h2>
 			            <div class="separator_small"></div>
 			            <h5>최대출력</h5>
 			        </div>
 			    </div>
-			    <div class="col-md-2">
-			        <div class="pricing_btn m-top-40">
+			    <div class="col-md-4">
+			        <div class="pricing_btn m-top-20">
 	                    <a href="#" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 	                </div>
 			    </div>
@@ -387,9 +390,9 @@
                 </div>
 
                 <div style="clear: both;"></div>
-
+				<div class="row">
                 <div class="grid text-center">
-                    <div class="grid-item models" style="width: 800px;">
+                    <div class="grid-item models" style="width: 600px;">
                         <img src="assets/images/model/model-s-performance-dual-motor-desktop_carousel-new.jpg" width="800px">
                         <div class="grid_hover_area text-center">
                             <div class="grid_hover_text m-top-50">
@@ -419,7 +422,7 @@
 					</div><!-- End off grid item -->
 
 
-                    <div class="grid-item modelsplaid" style="width: 800px;">
+                    <div class="grid-item modelsplaid" style="width: 600px;">
                     	<div class="row">
 	                        <img src="assets/images/model/model-s-performance-tri-motor-desktop_carousel-new.jpg" width="800px">
 	                        <div class="grid_hover_area text-center">
@@ -447,6 +450,7 @@
 									</div>
 								</div>
 							</div>
+                        </div>
                         </div>
                     </div><!-- End off grid item -->
                 </div>
@@ -600,89 +604,212 @@
 	</div><!--End off container -->
 </section>
 
+
+<section id="feature" class="feature p-top-100">
+	<div class="container">
+		<div class="row">
+			<div class="service_content_area">
+				<!-- Service LEFT SIDE -->
+				<div class="col-md-4 service_left wow fadeInLeft">
+					<!-- Service -->
+					<div class="service_items">
+						<div class="row">
+						
+							<!-- ICON -->
+							<div class="col-xs-3">
+								<div class="hexagon">
+									<div class="about-content">
+										<span class="fa fa-leaf"></span>
+									</div>    
+								</div>
+							</div>
+						
+							<div class="col-xs-9">
+								<div class="text-left service_left_text">
+									<h4 class="main-color">360°</h4>
+									<p>후방, 측방 및 전방 카메라가 최대의 가시성 제공</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end Single Service item -->
+				
+					<!-- Service -->
+					<div class="service_items">
+						<div class="row">
+							<!-- ICON -->
+							<div class="col-xs-3">
+								<div class="hexagon">
+									<div class="about-content">
+										<span class="fa fa-diamond"></span>
+									</div>    
+								</div>
+							</div>
+						
+							<div class="col-xs-9">
+								<div class="text-left service_left_text">
+					                <h4 class="main-color">250 m</h4>
+					                <p>최대 250 미터 범위에서의 강력한 시각적 처리</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end Single Service item -->
+				
+					<!-- Service -->
+					<div class="service_items">
+						<div class="row">
+							<!-- ICON -->
+							<div class="col-xs-3">
+								<div class="hexagon">
+									<div class="about-content">
+										<span class="fa fa-android"></span>
+									</div>    
+								</div>
+							</div>
+						
+							<div class="col-xs-9">
+								<div class="text-left service_left_text">
+									<h4 class="main-color">안전</h4>
+									<p>Tesla 비전은 주변 차량 감지, 잠재적 충돌 방지 및 주차 보조 기능을 제공합니다.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end Single Service item -->
+				</div>
+				<!-- /END Service LEFT -->
+			
+				<!-- PHONE IMAGE -->
+				<div class="col-md-8 sm-m-top-40 sm-text-center">
+					<div class="service-img wow bounceIn">
+						<img src="assets/images/model/Autopilot-Hero-Vision-Desktop.jpg" alt="Architect Img">
+					</div>
+				</div>
+			</div>
+		</div> <!--End off row -->
+	</div>
+</section>
+
 <!--Testimonial Section-->
 <section id="testimonial" class="testimonial fix roomy-100">
     <div class="container">
         <div class="row">
             <div class="main_testimonial text-center">
 
-                <div id="longtrip" class="carousel slide" data-ride="carousel">
+                <div id="specification" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="item active testimonial_item">
                             <div class="col-sm-10 col-sm-offset-1">
 
                                 <div class="test_authour">
-                                	
-                                	<h6 class="m-top-20">맨해튼에서 보스턴까지</h6>
+                                    <img src="assets/images/model/Model-S-Specs-Hero-Desktop-LHD.jpg" alt="" />
+                                    <h6 class="m-top-20">Model S 제원</h6>
+                                    <h5><em>Model S Plaid</em> </h5>
                                 </div>
-
-                                <h1 class=" m-top-40">340 km<br><br></h1>
-
-
+                                <div class="center">
+				            		<h5 class=" m-top-40">주행 가능 거리 (연비)</h5>
+	                                <p class=" m-top-40">483km (4.1km/kWh)</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">쿼터 마일</h5>
+	                                <p class=" m-top-40">약 9.23초 @250 km/h 트랩 속도</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">최대출력</h5>
+	                                <p class=" m-top-40">1,020 hp</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">휠</h5>
+	                                <p class=" m-top-40">19인치 또는 21인치</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">적재공간</h5>
+	                                <p class=" m-top-40">793 L</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">중량</h5>
+	                                <p class=" m-top-40">2,160 kg</p>
+									<p class="separator_small"></p>
+                                </div>
                             </div>
                         </div>
                         <div class="item testimonial_item">
                             <div class="col-sm-10 col-sm-offset-1">
 
                                 <div class="test_authour">
-                              		<img src="assets/images/FR_munich-zurich_2451x1125.avif" alt="" />
-                                    <h6 class="m-top-20">뭰헨에서 취리히까지</h6>
+                                    <img src="assets/images/model/Model-S-Specs-Hero-Desktop-LHD.jpg" alt="" />
+                                    <h6 class="m-top-20">Model S 제원</h6>
+                                    <h5><em>Model S</em> </h5>
                                 </div>
-
-                                <h1 class=" m-top-40">311 km<br><br></h1>
-
+                                <div class="center">
+				            		<h5 class=" m-top-40">주행 가능 거리 (연비)</h5>
+	                                <p class=" m-top-40">526km (4.5km/kWh)</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">최대출력</h5>
+	                                <p class=" m-top-40">670 hp</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">휠</h5>
+	                                <p class=" m-top-40">19인치 또는 21인치</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">적재공간</h5>
+	                                <p class=" m-top-40">793 L</p>
+									<p class="separator_small"></p>
+									
+									<h5 class=" m-top-40">중량</h5>
+	                                <p class=" m-top-40">2,070 kg</p>
+									<p class="separator_small"></p>
+                                </div>
                             </div>
                         </div>
-                        <div class="item testimonial_item">
-                            <div class="col-sm-10 col-sm-offset-1">
-
-                                <div class="test_authour">
-                                    <div class="work_item_img sm-text-center sm-m-top-40">
-										<video loop autoplay width="900px" preload="auto" muted controls>
-											<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/ac921a72-b7e7-404b-9acc-373a02ef2869/bvlatuR/WEBHD/MS-Interior-Carousel-3-Environment-Desktop">
-										</video>
-									</div>
-                                    <h6 class="m-top-20">완벽한 주행 환경</h6>
-                                </div>
-
-                                <p class=" m-top-40">실내 전체에 걸쳐 숨겨져 있는 송풍구와 3존 온도 제어, 통풍 시트 및 HEPA 필터 시스템이 완벽한 실내 환경을 제공합니다.<br><br><br></p>
-
-                            </div>
-                        </div>
-                        <div class="item testimonial_item">
-                            <div class="col-sm-10 col-sm-offset-1">
-
-                                <div class="test_authour">
-                                    <div class="work_item_img sm-text-center sm-m-top-40">
-										<video loop autoplay width="900px" preload="auto" muted controls>
-											<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/ce17484f-f941-4040-92b3-cc2a1564a6ff/bvlatuR/WEBHD/MS-Interior-Carousel-4-Rear-Seats-Desktop">
-										</video>
-									</div>
-                                    <h6 class="m-top-20">새롭게 설계된 2열 좌석</h6>
-                                </div>
-
-                                <p class=" m-top-40">3명의 성인을 위한 좌석, 여분의 레그룸 및 헤드룸, 무선 충전과 수납이 가능한 접이식 팔걸이를 갖췄습니다.<br><br><br></p>
-
-                            </div>
-                        </div>
-
                     </div>
 
                     <!-- Controls -->
-                <a class="left carousel-control" href="#longtrip" role="button" data-slide="prev">
-                    <span class="fa fa-long-arrow-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <span class="slash">/</span>
-                <a class="right carousel-control" href="#longtrip" role="button" data-slide="next">
-                    <span class="fa fa-long-arrow-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                    <a class="left carousel-control" href="#specification" role="button" data-slide="prev">
+                        <span class="fa fa-long-arrow-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <span class="slash">/</span>
+                    <a class="right carousel-control" href="#specification" role="button" data-slide="next">
+                        <span class="fa fa-long-arrow-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
 
+                </div>
             </div>
-        </div>
-    </div><!--End off row-->
-</div><!--End off container -->
+        </div><!--End off row-->
+    </div><!--End off container -->
 </section> <!--End off Testimonial section -->
+
+<!--About Sections-->
+<section id="feature" class="feature p-top-100">
+	<div class="container">
+		<div class="row">
+			<div class="main_feature">
+			
+				<div class="col-md-3 m-top-10">
+				
+					<div class="feature_content wow fadeIn m-top-150">
+						<h3>Model S</h3>
+						
+						<div class="feature_btns m-top-30">
+							<a href="" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-9">
+					<div class="feature_photo wow fadeIn sm-m-top-40">
+						<div class="feature_img">
+							<img src="assets/images/model/Model-S-Order-Hero-Desktop-Mobile-Global.jpg">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!--End off row-->
+	</div><!--End off container -->
+</section>
 
 </html>
