--- a/multisla/src/main/resources/templates/detail/modeldetail.html
+++ b/multisla/src/main/resources/templates/detail/modeldetail.html
@@ -1,7 +1,5 @@
-
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-<title>Insert title here</title>
 <style>
 	.modelsmain{
 		background: url(assets/images/model/Model-S-Main.jpg) no-repeat top center;
@@ -28,79 +26,80 @@
 		background: url(assets/images/model/Autopilot-Hero-Vision-Desktop.jpg) no-repeat top center;
 	}
 </style>
- 
-<!--Home Sections-->
-<section id="hello" class="modelsmain bg-mega">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="text-center" style="margin-top: 150px">
-				<h1 style="color: gray;">Model S</h1>
-            </div>
-            <div class="main_home text-center">
-                <div class="home_text">
-                </div>
-            </div>
-			<div class="main_counter text-center">
-			    <div class="col-md-2">
-			        <div class="counter_item">
-			            <h2 class="statistic-counter" style="color: white;"><em>483</em></h2>
-			            <h2 style="color: white;">km</h2>
-			            <div class="separator_small"></div>
-			            <h5>주행 가능 거리</h5>
-			        </div>
-			    </div>
-			    <div class="col-md-2">
-			        <div class="counter_item">
-			            <h2 class="statistic-counter" style="color: white;"><em>2.1</em></h2>
-			            <h2 style="color: white;">sec</h2>
-			            <div class="separator_small"></div>
-			            <h5>0-100 km/h*</h5>
-			        </div>
-			    </div>
-			    <div class="col-md-2">
-			        <div class="counter_item">
-			            <h2 class="statistic-counter" style="color: white;"><em>322</em></h2>
-			            <h2 style="color: white;">km/h</h2>
-			            <div class="separator_small"></div>
-			            <h5>최고속도†</h5>
-			        </div>
-			    </div>
-			    <div class="col-md-2">
-			        <div class="counter_item">
-			            <h2 class="statistic-counter" style="color: white;"><em>1,020</em></h2>
-			            <h2 style="color: white;">hp</h2>
-			            <div class="separator_small"></div>
-			            <h5>최대출력</h5>
-			        </div>
-			    </div>
-			    <div class="col-md-4">
-			        <div class="pricing_btn m-top-20">
-	                    <a href="#" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+
+<div style="background-color: black;">
+	<!--Home Sections-->
+	<section id="hello" class="modelsmain bg-mega">
+	    <div class="overlay"></div>
+	    <div class="container">
+	        <div class="row">
+	            <div class="text-center" style="margin-top: 150px">
+					<h1 style="color: gray;">Model S</h1>
+	            </div>
+	            <div class="main_home text-center">
+	                <div class="home_text">
 	                </div>
-			    </div>
-			</div>
-			
-        </div><!--End off row-->
-	</div><!--End off container -->
-</section> <!--End off Home Sections-->
-
-<section id="hello" class="modelsinterior bg-mega">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-        	<div class="text-center" style="margin-top: 50px;">
-				<h1 style="color: white;">미래지향적 인테리어</h1>
-            </div>
-            <div class="main_home text-center">
-                <div class="home_text">
-
-                </div>
-            </div>
-        </div><!--End off row-->
-	</div><!--End off container -->
-</section> <!--End off Home Sections-->
-
+	            </div>
+				<div class="main_counter text-center">
+				    <div class="col-md-2">
+				        <div class="counter_item">
+				            <h2 class="statistic-counter" style="color: white;"><em>483</em></h2>
+				            <h2 style="color: white;">km</h2>
+				            <div class="separator_small"></div>
+				            <h5 style="color: white;">주행 가능 거리</h5>
+				        </div>
+				    </div>
+				    <div class="col-md-2">
+				        <div class="counter_item">
+				            <h2 class="statistic-counter" style="color: white;"><em>2.1</em></h2>
+				            <h2 style="color: white;">sec</h2>
+				            <div class="separator_small"></div>
+				            <h5 style="color: white;">0-100 km/h*</h5>
+				        </div>
+				    </div>
+				    <div class="col-md-2">
+				        <div class="counter_item">
+				            <h2 class="statistic-counter" style="color: white;"><em>322</em></h2>
+				            <h2 style="color: white;">km/h</h2>
+				            <div class="separator_small"></div>
+				            <h5 style="color: white;">최고속도†</h5>
+				        </div>
+				    </div>
+				    <div class="col-md-2">
+				        <div class="counter_item">
+				            <h2 class="statistic-counter" style="color: white;"><em>1,020</em></h2>
+				            <h2 style="color: white;">hp</h2>
+				            <div class="separator_small"></div>
+				            <h5 style="color: white;">최대출력</h5>
+				        </div>
+				    </div>
+				    <div class="col-md-4">
+				        <div class="pricing_btn m-top-20">
+		                    <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		                </div>
+				    </div>
+				</div>
+				
+	        </div><!--End off row-->
+		</div><!--End off container -->
+	</section> <!--End off Home Sections-->
+	
+	<section id="hello" class="modelsinterior bg-mega">
+	    <div class="overlay"></div>
+	    <div class="container">
+	        <div class="row">
+	        	<div class="text-center" style="margin-top: 50px;">
+					<h1 style="color: white;">미래지향적 인테리어</h1>
+	            </div>
+	            <div class="main_home text-center">
+	                <div class="home_text">
+	
+	                </div>
+	            </div>
+	        </div><!--End off row-->
+		</div><!--End off container -->
+	</section> <!--End off Home Sections-->
+</div>
 <!--Testimonial Section-->
 <section id="testimonial" class="testimonial fix roomy-100">
     <div class="container">
@@ -354,7 +353,7 @@
 			    <p>Model S Plaid는 현존하는 양산 차량 중 가장 빠른 가속력을 자랑하는 차량 중 하나입니다. 모든 Model S는 업데이트된 배터리 구조를 통해 반복적인 트랙 주행에도 성능 저하가 일어나지 않습니다.</p>
 			
 			
-			    <a href="blog-details.html" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			    <a href="/carbuild" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 			</div>
 		</div>
 	</div>
@@ -393,14 +392,14 @@
 				<div class="row">
                 <div class="grid text-center">
                     <div class="grid-item models" style="width: 600px;">
-                        <img src="assets/images/model/model-s-performance-dual-motor-desktop_carousel-new.jpg" width="800px">
+                        <img src="assets/images/model/model-s-performance-dual-motor-desktop_carousel-new.jpg" width="600px">
                         <div class="grid_hover_area text-center">
                             <div class="grid_hover_text m-top-50">
                                 <h4 class="text-white">Model S</h4>
                             </div>
                         </div><!-- End off grid Hover area -->
                         <h3>Model S Plaid</h3>
-                        <p>토크 벡터링 및 3개의 독립적인 카본 슬리브 로터를 갖춘 트라이 모터 AWD로 322km/h까지 1,000마력 이상을 유지합니다.</p>
+                        <p>토크 벡터링 및 3개의 독립적인 카본 슬리브 로터를 갖춘 <br>트라이 모터 AWD로 322km/h까지 1,000마력 이상을 유지합니다.</p>
                         <div class="main_counter text-center">
 							<div class="col-md-4">
 								<div class="counter_item">
@@ -424,14 +423,14 @@
 
                     <div class="grid-item modelsplaid" style="width: 600px;">
                     	<div class="row">
-	                        <img src="assets/images/model/model-s-performance-tri-motor-desktop_carousel-new.jpg" width="800px">
+	                        <img src="assets/images/model/model-s-performance-tri-motor-desktop_carousel-new.jpg" width="600px">
 	                        <div class="grid_hover_area text-center">
 	                            <div class="grid_hover_text m-top-50">
 	                                <h4 class="text-white">Model S Plaid</h4>
 	                            </div>
 	                        </div><!-- End off grid Hover area -->
 	                        <h3>Model S</h3>
-	                        <p>듀얼 모터 상시 사륜구동(AWD)은 강력한 출력과 최적의 제어를 통해 획기적인 주행가능 거리를 제공합니다.</p>
+	                        <p>듀얼 모터 상시 사륜구동(AWD)은 강력한 출력과 <br>최적의제어를 통해 획기적인 주행가능 거리를 제공합니다.</p>
 							<div class="main_counter text-center">
 								<div class="col-md-4">
 									<div class="counter_item">
@@ -490,7 +489,7 @@
 			    <p>Model S는 0.208 Cd에 불과한 공기저항 계수를 자랑하며 속도, 내구성 및 주행 가능 거리를 위해 설계되었습니다. 향상된 공기역학 성능과 더 넓어진 차체는 더 빠른 응답성을 발휘하여 운전자가 더 빠르고 자신 있게 코너를 주행할 수 있습니다.</p>
 			
 			
-			    <a href="blog-details.html" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			    <a href="/carbuild" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 			</div>
 		</div>
 	</div>
@@ -586,7 +585,7 @@
 						
 						<p>**표시된 수치는 V3 수퍼차저 충전 기준이며, 수퍼차저의 종류, 배터리 컨디션 및 외부 온도 등에 따라 충전시간과 주행 가능 거리는 달라질 수 있습니다.</p>
 						<div class="feature_btns m-top-30">
-							<a href="" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/carbuild" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -796,7 +795,7 @@
 						<h3>Model S</h3>
 						
 						<div class="feature_btns m-top-30">
-							<a href="" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/carbuild" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
