--- a/multisla/src/main/resources/templates/orders.html
+++ b/multisla/src/main/resources/templates/orders.html
@@ -52,8 +52,8 @@
                 new daum.Postcode({
                     oncomplete: function(data) {
                       // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분입니다.
-                      $("#upost").val(data.zonecode);
-                      $("#uaddr").val(data.roadAddress);
+                      $("#shippost").val(data.zonecode);
+                      $("#shipaddr").val(data.roadAddress);
                     }
                 }).open();
             });
@@ -83,8 +83,7 @@
 	    		if(name !=''){
 	    			$('#namespan').hide();
 	    		}
-	    		if(post !='')
-	    			$('#addrspan').hide();
+
 	    		
 	    		
 	    		
@@ -169,7 +168,7 @@
 	    		  return str;
 	    		}
 	    	
-	    	$('#uphone').keyup(function (event) {
+	    	$('#shipphone').keyup(function (event) {
 	    		  event = event || window.event;
 	    		  var _val = this.value.trim();
 	    		  this.value = autoHypenTel(_val);
@@ -276,7 +275,7 @@
 														<input type="text" class="form-control" name="shippost" id="shippost" placeholder="우편번호" readonly th:value="${users.upost}"/>
 													</div>
 													<div class="col-md-4">
-														<button id="postbtn"type="button" class="btn btn-info" onclick="execDaumPostcode()">우편번호 찾기</button>
+														<button type="button" class="btn btn-info" onclick="execDaumPostcode()">우편번호 찾기</button>
 													</div>
 												</div>
 												<div class="m-top-10">
