--- a/multisla/src/main/resources/templates/orders.html
+++ b/multisla/src/main/resources/templates/orders.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
     <head>
 		<style>
 			#div-top{
@@ -186,10 +186,9 @@
  
 
 
+<div th:if="${session.loginusers != null}">
+	<div th:if="${session.loginusers.uid == users.uid}">
             <!--Home Sections-->
-
-
-
             <!--Blog Features Section-->
             <section id="blog_details" class="blog_details roomy-100">
                 <div class="container">
@@ -364,8 +363,14 @@
             <div class="scrollup">
                 <a href="#"><i class="fa fa-chevron-up"></i></a>
             </div><!-- End off scroll up -->
-
-
+	</div>
+	<div id="div-top" class="container-fluid" th:unless="${session.loginusers.uid == users.uid}">
+		<h1 class="text-black text-center">잘못 된 경로입니다.</h1>
+	</div>
+</div>
+<div id="div-top" class="container-fluid" th:unless="${session.loginusers != null}">
+	<h1 class="text-black text-center">잘못 된 경로입니다.</h1>
+</div>
            
 
 
