--- a/multisla/src/main/resources/templates/garage/garage.html
+++ b/multisla/src/main/resources/templates/garage/garage.html
@@ -14,7 +14,8 @@
 					<div class="main-gallery main-model roomy-80">
 						<div class="text-center">
 							<h1>내 차고</h1>
-							<p>내가 디자인한 나만의 멀티슬라 자동차를 확인할 수 있습니다.</p>
+							<h4>My Garage</h4>
+							<p>내가 디자인한 나만의 멀티슬라 자동차 리스트를 확인할 수 있습니다.</p>
 						</div>						
 						<div class="col-md-12 m-bottom-60 m-top-60">
 							<div class="filters-button-group sm-text-center">
@@ -36,7 +37,7 @@
 							<div th:each="u : ${ugarage}" class="grid-item model-item transition" th:classappend="${u.mname} ? ${u.mname}" >
 								<img alt="????" th:src="@{'assets/images/garage/'+${u.mname}+'_'+${u.coloption}+'_'+${u.woption}+'.png'}">
 								<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
-							          			
+							    <h5 th:text="${u.mname}"></h5> 			
 							</div><!-- End off grid item -->
 						
 						</div>
@@ -46,7 +47,7 @@
 							<div th:each="u : ${ugarage}" class="grid-item model-item transition" th:classappend="${u.mname} ? ${u.mname}" >
 								<img alt="????" th:src="@{'assets/images/garage/'+${u.mname}+'_'+${u.coloption}+'_'+${u.woption}+'.png'}">
 								<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
-							          			
+							    <h5 th:text="${u.mname}"></h5>       			
 							</div><!-- End off grid item -->
 						
 						</div>
