--- a/multisla/src/main/resources/templates/garage/garagedetail.html
+++ b/multisla/src/main/resources/templates/garage/garagedetail.html
@@ -18,6 +18,12 @@ margin:auto;
 		<section id="m_details" class="m_details roomy-100 fix">
 			<div class="container">
 				<div class="row">
+					<div class="text-center m-bottom-60">
+						<h1>내 자동차 상세보기</h1>
+						<h4>My Multisla Detail</h4>
+						<p>내가 디자인한 나만의 멀티슬라 자동차의 상세정보를 확인할 수 있습니다.</p>
+					</div>						
+				
 					<div class="main_details">
 						<div class="col-md-6">
 							<div class="m_details_img">
